--- a/szcp/src/main/resources/application-dev.yml
+++ b/szcp/src/main/resources/application-dev.yml
@@ -1,6 +1,6 @@
 
 server:
-  port: 7089
+  port: 7090
   servlet:
     context-path: /
 
@@ -8,7 +8,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://118.31.187.222:3306/bankAccount?allowMultiQueries=true&serverTimezone=GMT-8&characterEncoding=UTF-8
+    url: jdbc:mysql://localhost:3306/valueCompany?allowMultiQueries=true&serverTimezone=GMT-8&characterEncoding=UTF-8
     username: root
     password: 12369
     driver-class-name:  com.mysql.cj.jdbc.Driver
@@ -17,7 +17,7 @@ spring:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
 
-projectHttp: "Http://localhost:7071"
+projectHttp: "Http://localhost:7090"
 
 #如果数据为空的字段，则该字段省略不显示，可以通过添加配置文件，规定查询数据为空是则返回null。
 mybatis:
