--- a/szcp/src/main/resources/application-dev.yml
+++ b/szcp/src/main/resources/application-dev.yml
@@ -8,7 +8,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://118.31.187.222:3306/valueCompany?allowMultiQueries=true&serverTimezone=GMT-8&characterEncoding=UTF-8
+    url: jdbc:mysql://localhost:3306/valueCompany?allowMultiQueries=true&serverTimezone=GMT-8&characterEncoding=UTF-8
     username: root
     password: 12369
     driver-class-name:  com.mysql.cj.jdbc.Driver
